[tool.poetry]
name = "repl_python3_Telegram-Music-Bot-HypeVoidMusic"
version = "0.1.0"
description = ""
authors = ["mastermindvrtx <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
ffmpeg = "^1.4"
heroku3 = "^4.2.3"
pyrogram = "^1.2.9"
config = "^0.5.0"
youtube-dl = "^2021.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
